<resources>
    <string name="app_name">Students Toolbox</string>
    <string name="dashboard">Dashboard</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="studentName">Name</string>
    <string name="studentSurname">Surname</string>
    <string name="studentEmail">E-mail</string>
    <string name="profileUpdate">Updated</string>
    <string name="updateBtn">update</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="dashboardText1">Welcome</string>
    <string name="dashboardText2">Welcome, </string>


    <string-array name="Timetable">
        <item></item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>

    <string-array name="days">
        <item >Monday</item>
        <item >Tuesday</item>
        <item >Wednesday</item>
        <item >Thursday</item>
        <item >Friday</item>
    </string-array>
</resources>
